fix scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,18 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: var(--dark-brown);
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--white);
+    border-radius: 2rem;
+}
+
 body{
     background-color: var(--dark-brown) ;
 }
